// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: functions (lambdas, pis, applications) > application: f x 1`] = `
{
  "arg": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "fn": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "f",
    },
  },
  "icit": "Explicit",
  "type": "application",
}
`;

exports[`parser: functions (lambdas, pis, applications) > arrow: 1 -> 2 1`] = `
{
  "icit": "Explicit",
  "lhs": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 1,
    },
  },
  "rhs": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "type": "arrow",
}
`;

exports[`parser: functions (lambdas, pis, applications) > implicit lambda: \\x => 2 1`] = `
{
  "annotation": undefined,
  "body": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "icit": "Implicit",
  "type": "lambda",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > implicit pi: (x: 1) => 2 1`] = `
{
  "annotation": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 1,
    },
  },
  "body": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "icit": "Implicit",
  "type": "pi",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > lambda: \\x -> 2 1`] = `
{
  "annotation": undefined,
  "body": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > multi implicit params: \\x y z => 2 1`] = `
{
  "annotation": undefined,
  "body": {
    "annotation": undefined,
    "body": {
      "annotation": undefined,
      "body": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
      "icit": "Implicit",
      "type": "lambda",
      "variable": "z",
    },
    "icit": "Implicit",
    "type": "lambda",
    "variable": "y",
  },
  "icit": "Implicit",
  "type": "lambda",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > multi params: \\x y z -> 2 1`] = `
{
  "annotation": undefined,
  "body": {
    "annotation": undefined,
    "body": {
      "annotation": undefined,
      "body": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 2,
        },
      },
      "icit": "Explicit",
      "type": "lambda",
      "variable": "z",
    },
    "icit": "Explicit",
    "type": "lambda",
    "variable": "y",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > multi typed params: \\(x: Num) (y: String) (z: Bool) -> 4 1`] = `
{
  "annotation": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "body": {
    "annotation": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "String",
      },
    },
    "body": {
      "annotation": {
        "type": "var",
        "variable": {
          "type": "name",
          "value": "Bool",
        },
      },
      "body": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 4,
        },
      },
      "icit": "Explicit",
      "type": "lambda",
      "variable": "z",
    },
    "icit": "Explicit",
    "type": "lambda",
    "variable": "y",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
}
`;

exports[`parser: functions (lambdas, pis, applications) > nested application: f x y 1`] = `
{
  "arg": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "y",
    },
  },
  "fn": {
    "arg": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "fn": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "f",
      },
    },
    "icit": "Explicit",
    "type": "application",
  },
  "icit": "Explicit",
  "type": "application",
}
`;

exports[`parser: functions (lambdas, pis, applications) > pi: (x: 1) -> 2 1`] = `
{
  "annotation": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 1,
    },
  },
  "body": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "icit": "Explicit",
  "type": "pi",
  "variable": "x",
}
`;
